--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.4.4",
+    "airtable": "^0.8.1",
+    "axios": "^0.19.1",
+    "chart.js": "^2.9.3",
+    "core-js": "^3.6.3",
+    "d3": "^5.15.0",
+    "date-fns": "^2.9.0",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
